--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet"href="index.css">
+    <title>social link</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h2>CODE</h2>
-    <p>My name is Olatunbosun David, an avid reader and programmer</p>
+   <div></div> 
 </body>
 </html>
